<resources>
    <string name="app_name">FasterFood</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Faster Food</string>
    <string name="nav_header_subtitle">A place to share your own recipes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_create">Create Recipe</string>
    <string name="menu_view">View Recipes</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_update">Update Profile</string>
    <string name="menu_rate">Rate Recipe</string>
    <string name="menu_recipe">My Recipe</string>
    <string name="menu_view_my_recipes">View All My Recipes</string>

    <string name="view_recipe">View Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="description">Description</string>
    <string name="food_image_desc">Image of food</string>
    <string name="view_all_recipe">View All Recipes</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="menu_signout">Sign out</string>
    <string name="action_signout">Sign out</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>