<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fasterfood.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_create_recipe"
        android:name="com.example.fasterfood.fragment.recipe.CreateRecipeFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create_recipe" />

    <fragment
        android:id="@+id/nav_rate_recipe"
        android:name="com.example.fasterfood.fragment.recipe.RateRecipeFragment"
        android:label="@string/menu_rate"
        tools:layout="@layout/fragment_rate_recipe" />

    <fragment
        android:id="@+id/nav_view_recipe"
        android:name="com.example.fasterfood.fragment.recipe.ViewSingleRecipeFragment"
        android:label="@string/menu_view"
        tools:layout="@layout/fragment_viewsinglerecipe" />

    <fragment
        android:id="@+id/nav_view_my_recipe"
        android:name="com.example.fasterfood.fragment.recipe.ViewRecipeFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_viewrecipe" />

    <fragment
        android:id="@+id/nav_updateprofile"
        android:name="com.example.fasterfood.fragment.updateprofile.UpdateprofileFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_updateprofile" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.fasterfood.fragment.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.fasterfood.fragment.signup.SignupFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_viewAllRecipes"
        android:name="com.example.fasterfood.fragment.recipe.ViewAllRecipesFragment"
        android:label="@string/view_all_recipe"
        tools:layout="@layout/fragment_view_all_recipes"/>

    <fragment
        android:id="@+id/nav_view_my_recipe_list"
        android:name="com.example.fasterfood.fragment.recipe.ViewAllMyRecipesFragment"
        android:label="@string/menu_view_my_recipes"
        tools:layout="@layout/fragment_view_all_recipes" />
</navigation>